--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ body {
     color: #155739;
 }
 
+.menugreen {
+    background-color: #155739;
+}
+
 .Main {
     background-color: #FBF4E8;
     background-image: url('../public/assets/all.png');
