--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,15 @@
     font-family: 'SF_HailSnow';
 }
 
-.OA {
+.OAtitle {
     font-family: 'OAGothic-ExtraBold';
     color: white;
     -webkit-text-stroke: 1px #155739;
     text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.56);
+}
+
+.OA {
+    font-family: 'OAGothic-ExtraBold';
 }
 
 body {
