--- a/src/component/style.css
+++ b/src/component/style.css
@@ -220,3 +220,17 @@
 .SketchElement .box {
     background-color: rgb(240, 215, 170, 0.37);
 }
+
+.slide-in {
+    animation: change 0.5s ease forwards;
+}
+
+@keyframes change {
+    from {
+        transform: rotateY(90deg);
+        visibility: visible;
+    }
+    to {
+        transform: translateX(0%);
+    }
+}
