--- a/src/component/style.css
+++ b/src/component/style.css
@@ -363,3 +363,11 @@
 .modaltitle {
     color: #155739;
 }
+
+.modaltitlegame {
+    color: #155739;
+    font-size: 32px;
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: white;
+    text-shadow: 3px 2px 3px rgba(0, 0, 0, 0.3);
+}
