--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,9 +1,4 @@
-.collabo .team-sketch > img {
-    width: 80px;
-    height: auto;
-}
-
-.collabo .team-likelion > img {
+.collabo .team-logo > img {
     width: 80px;
     height: auto;
 }
@@ -14,4 +9,68 @@
 
 .font-size10 {
     font-size: 10px;
+}
+.pbox {
+    width: 120px;
+    height: 170px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    border: 1px solid #155739;
+}
+
+.Pimg {
+    height: 70px;
+    width: auto;
+    margin-bottom: 11px;
+}
+
+.pbox {
+    padding: 5px;
+}
+
+.pbox span {
+    display: block;
+}
+
+.Pinfo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 3px;
+    align-items: center;
+}
+
+.Pinfo img {
+    height: 18px;
+    width: auto;
+    margin-right: 5px;
+}
+
+.Pinfo span {
+    font-size: 5px;
+}
+
+.Pname {
+    color: #404040;
+}
+
+.Pdepart {
+    margin: 0;
+    font-size: 9px;
+    color: #155739;
+}
+
+.Pposi {
+    font-size: 9px;
+    margin: 0;
+    color: #155739;
+}
+
+.Prole {
+    color: #404040;
+}
+.people{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
 }
