--- a/src/component/style.css
+++ b/src/component/style.css
@@ -82,12 +82,12 @@
     border-color: #BFD8EE;
 }
 
-.Sketch .joy_color {
+.Joy .joy_color {
     color: #AE87BC;
     border-color: #AE87BC;
 }
 
-.Sketch .joy_color_off {
+.Joy .joy_color_off {
     color: #E0C0EC;
     border-color: #E0C0EC;
 }
