--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
+.oatitleshadownone {
+    text-shadow: none !important;
+}
+
 .OA {
     font-family: 'OAGothic-ExtraBold';
 }
